add(ThisDay): new template for component

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,8 @@
-.Main {
-  font-size: 412px;
+.home {
+  padding-top: 30px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
 }
