add(ThisDayInfo&ThisDayItem): add new components

--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -6,7 +6,8 @@
   padding: 20px;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
-  background-color: $background-dark;
+  background-color: $background-light;
+  margin-right: 50px;
 
   &_top {
     display: flex;
