--- a/src/pages/Home/components/ThisDayInfio/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfio/ThisDayInfo.module.scss
@@ -8,7 +8,7 @@
     padding: 20px;
     box-shadow: $box-shadow;
     border-radius: $border-radius;
-    background-color: $background-light;
+    background-color: $light-background;
     padding: 40px;
     flex: 1;
 
