--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
-$background-light: #fff;
+$light-background: #fff;
 $background-dark: #4F4F4F;
 $border-radius: 20px;
-$color-grey: #939CB0;
-$color-blue: #4793FF;
+$base-color: #939CB0;
+$primary-color: #4793FF;
