--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,12 @@
 @import '~normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500;600;700&family=Montserrat:wght@400;500;700&display=swap');
 
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
 body {
+  position: relative;
   font-family: 'Montserrat', sans-serif;
 }
 
